Edit list of arbitrary instances in report

--- a/report/report.tex
+++ b/report/report.tex
@@ -359,9 +359,9 @@ Schedgehog currently provides generators and arbitrary instances for
   \item \verb|integer|,
   \item \verb|positive-integer|,
   \item \verb|nonnegative-integer|,
-  \item \verb|floats|,
-  \item \verb|linear| (integers from \(0\) through \(n\)),
-  \item \verb|range| (integers from \(m\) through \(n\)),
+  \item \verb|float|,
+  \item \verb|linear| (integers from \(0\) through \(n\), shrinking down),
+  \item \verb|range| (integers from \(m\) through \(n\), shrinking to \(m\)),
   \item \verb|range-from| (integers from \(m\) through \(n\),
                            shrinking towards some origin \(k\)),
   \item \verb|pair|,
